--- a/learning1/fakedata/templates/fake.html
+++ b/learning1/fakedata/templates/fake.html
@@ -14,33 +14,56 @@
                         <div class="container mt-5">
                             <div class="d-flex justify-content-start">
                                 <label for="dropdawn">Chose the key</label>
-                                {% for _ in 5|times %}
                                 <div class="dropdown me-2 ms-3">
                                     <select
                                         class="form-select"
                                         name="option_key"
                                         id="option_key"
                                     >
-                                        <option value="first_name">
-                                            First Name
+                                        <option value="Full_Name">
+                                            Full Name
                                         </option>
-                                        <option value="last_name">
-                                            Last Name
+                                        <option value="address_pincode">
+                                            Pincode
                                         </option>
-                                        <option value="address">Address</option>
-                                        <option value="email">Email</option>
-                                        <option value="phone_number">
-                                            Phone Number
-                                        </option>
+                                        <option value="email">City</option>
                                     </select>
                                 </div>
-                                {% endfor %}
+                                <div class="dropdown me-2 ms-3">
+                                    <select
+                                        class="form-select"
+                                        name="country_key"
+                                        id="country_key"
+                                    >
+                                        <option value="India">India</option>
+                                        <option value="Japan">Japan</option>
+                                        <option value="America">America</option>
+                                        <option value="UK">UK</option>
+                                        <option value="Africa">Africa</option>
+                                    </select>
+                                </div>
+
                                 <button class="btn btn-primary" type="submit">
                                     Submit
                                 </button>
                             </div>
+                            <div class="container mt-5">
+                                <div class="d-flex justify-content-start">
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        name="search"
+                                        id="search"
+                                        placeholder="Filter from below data"
+                                    />
+                                    <button class="btn btn-primary ms-2" type="submit">
+                                        Search
+                                    </button>
+                                </div>
                         </div>
                         <hr />
+                        <!--Search box -->
+
                         <table class="table">
                             <thead>
                                 <tr>
@@ -66,31 +89,96 @@
                             {% endfor %}
 
                             <div class="pagination">
-                                <span class="step-links">
-                                    {% if page_obj.has_previous %}
-                                    <a href="?page=1">&laquo; first</a>
-                                    <a
-                                        href="?page={{ page_obj.previous_page_number }}"
-                                        >previous</a
+                                <nav aria-label="Page navigation">
+                                    <ul
+                                        class="pagination justify-content-center"
                                     >
-                                    {% endif %}
+                                        <span class="step-links">
+                                            {% if page_obj.has_previous %}
+                                            <li class="page-item">
+                                                <a
+                                                    class="page-link"
+                                                    href="?page=1"
+                                                    aria-label="First"
+                                                >
+                                                    <span aria-hidden="true"
+                                                        >&laquo; First</span
+                                                    >
+                                                </a>
+                                            </li>
+                                            <li class="page-item">
+                                                <a
+                                                    class="page-link"
+                                                    href="?page={{ page_obj.previous_page_number }}"
+                                                    aria-label="Previous"
+                                                >
+                                                    <span aria-hidden="true"
+                                                        >Previous</span
+                                                    >
+                                                </a>
+                                            </li>
+                                            {% else %}
+                                            <li class="page-item disabled">
+                                                <span class="page-link"
+                                                    >&laquo; First</span
+                                                >
 
-                                    <span class="current">
-                                        Page {{ page_obj.number }} of {{
-                                        page_obj.paginator.num_pages}}
-                                    </span>
+                                            </li>
+                                            <li class="page-item disabled">
+                                                <span class="page-link"
+                                                    >Previous</span
+                                                >
+                                            </li>
+                                            {% endif %}
+                                        </span>
 
-                                    {% if page_obj.has_next %}
-                                    <a
-                                        href="?page={{ page_obj.next_page_number }}"
-                                        >next</a
-                                    >
-                                    <a
-                                        href="?page={{ page_obj.paginator.num_pages }}"
-                                        >last &raquo;</a
-                                    >
-                                    {% endif %}
-                                </span>
+                                        <li class="page-item disabled">
+                                            <span class="page-link text-success fs-4 ">
+                                                Page {{ page_obj.number }} of
+                                                {{ total_pages }}
+                                            </span>
+
+                                        </li>
+
+                                        <span class="step-links">
+                                            {% if page_obj.has_next %}
+                                            <li class="page-item">
+                                                <a
+                                                    class="page-link"
+                                                    href="?page={{ page_obj.next_page_number }}"
+                                                    aria-label="Next"
+                                                >
+                                                    <span aria-hidden="true"
+                                                        >Next</span
+                                                    >
+                                                </a>
+                                            </li>
+                                            <li class="page-item">
+                                                <a
+                                                    class="page-link"
+                                                    href="?page={{ page_obj.paginator.num_pages }}"
+                                                    aria-label="Last"
+                                                >
+                                                    <span aria-hidden="true"
+                                                        >Last &raquo;</span
+                                                    >
+                                                </a>
+                                            </li>
+                                            {% else %}
+                                            <li class="page-item disabled">
+                                                <span class="page-link"
+                                                    >Next</span
+                                                >
+                                            </li>
+                                            <li class="page-item disabled">
+                                                <span class="page-link"
+                                                    >Last &raquo;</span
+                                                >
+                                            </li>
+                                            {% endif %}
+                                        </span>
+                                    </ul>
+                                </nav>
                             </div>
                         </table>
                     </form>
