--- a/learning1/fakedata/templates/fake.html
+++ b/learning1/fakedata/templates/fake.html
@@ -11,44 +11,15 @@
                     </h4>
                     <form class="form" method="POST" action="{% url 'fake' %}">
                         {% csrf_token %}
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
                         <div class="container mt-5">
                             <div class="d-flex justify-content-start">
-                                <label for="dropdawn">Chose the key</label>
-                                <div class="dropdown me-2 ms-3">
-                                    <select
-                                        class="form-select"
-                                        name="option_key"
-                                        id="option_key"
-                                    >
-                                        <option value="Full_Name">
-                                            Full Name
-                                        </option>
-                                        <option value="address_pincode">
-                                            Pincode
-                                        </option>
-                                        <option value="email">City</option>
-                                    </select>
-                                </div>
-                                <div class="dropdown me-2 ms-3">
-                                    <select
-                                        class="form-select"
-                                        name="country_key"
-                                        id="country_key"
-                                    >
-                                        <option value="India">India</option>
-                                        <option value="Japan">Japan</option>
-                                        <option value="America">America</option>
-                                        <option value="UK">UK</option>
-                                        <option value="Africa">Africa</option>
-                                    </select>
-                                </div>
 
-                                <button class="btn btn-primary" type="submit">
-                                    Submit
-                                </button>
-                            </div>
                             <div class="container mt-5">
-                                <div class="d-flex justify-content-start">
+                                <div class="d-flex justify-content-center ">
                                     <input
                                         type="text"
                                         class="form-control"
@@ -60,131 +31,137 @@
                                         Search
                                     </button>
                                 </div>
-                        </div>
-                        <hr />
-                        <!--Search box -->
-
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Id</th>
-                                    <th scope="col">First_name</th>
-                                    <th scope="col">Last_name</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Phone_number</th>
-                                    <th scope="col">Address</th>
-                                </tr>
-                            </thead>
-                            {% for data_fake in data %}
-                            <tbody>
-                                <tr>
-                                    <th scope="row">{{data_fake.unique_id}}</th>
-                                    <td>{{data_fake.first_name}}</td>
-                                    <td>{{data_fake.last_name}}</td>
-                                    <td>{{data_fake.email}}</td>
-                                    <td>{{data_fake.phone}}</td>
-                                    <td>{{data_fake.address}}</td>
-                                </tr>
-                            </tbody>
-                            {% endfor %}
-
-                            <div class="pagination">
-                                <nav aria-label="Page navigation">
-                                    <ul
-                                        class="pagination justify-content-center"
-                                    >
-                                        <span class="step-links">
-                                            {% if page_obj.has_previous %}
-                                            <li class="page-item">
-                                                <a
-                                                    class="page-link"
-                                                    href="?page=1"
-                                                    aria-label="First"
-                                                >
-                                                    <span aria-hidden="true"
-                                                        >&laquo; First</span
-                                                    >
-                                                </a>
-                                            </li>
-                                            <li class="page-item">
-                                                <a
-                                                    class="page-link"
-                                                    href="?page={{ page_obj.previous_page_number }}"
-                                                    aria-label="Previous"
-                                                >
-                                                    <span aria-hidden="true"
-                                                        >Previous</span
-                                                    >
-                                                </a>
-                                            </li>
-                                            {% else %}
-                                            <li class="page-item disabled">
-                                                <span class="page-link"
-                                                    >&laquo; First</span
-                                                >
-
-                                            </li>
-                                            <li class="page-item disabled">
-                                                <span class="page-link"
-                                                    >Previous</span
-                                                >
-                                            </li>
-                                            {% endif %}
-                                        </span>
-
-                                        <li class="page-item disabled">
-                                            <span class="page-link text-success fs-4 ">
-                                                Page {{ page_obj.number }} of
-                                                {{ total_pages }}
-                                            </span>
-
-                                        </li>
-
-                                        <span class="step-links">
-                                            {% if page_obj.has_next %}
-                                            <li class="page-item">
-                                                <a
-                                                    class="page-link"
-                                                    href="?page={{ page_obj.next_page_number }}"
-                                                    aria-label="Next"
-                                                >
-                                                    <span aria-hidden="true"
-                                                        >Next</span
-                                                    >
-                                                </a>
-                                            </li>
-                                            <li class="page-item">
-                                                <a
-                                                    class="page-link"
-                                                    href="?page={{ page_obj.paginator.num_pages }}"
-                                                    aria-label="Last"
-                                                >
-                                                    <span aria-hidden="true"
-                                                        >Last &raquo;</span
-                                                    >
-                                                </a>
-                                            </li>
-                                            {% else %}
-                                            <li class="page-item disabled">
-                                                <span class="page-link"
-                                                    >Next</span
-                                                >
-                                            </li>
-                                            <li class="page-item disabled">
-                                                <span class="page-link"
-                                                    >Last &raquo;</span
-                                                >
-                                            </li>
-                                            {% endif %}
-                                        </span>
-                                    </ul>
-                                </nav>
                             </div>
-                        </table>
-                    </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<hr />
+<!--Search box -->
+
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">First_name</th>
+            <th scope="col">Last_name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone_number</th>
+            <th scope="col">Address</th>
+        </tr>
+    </thead>
+    {% for data_fake in data %}
+    <tbody>
+        <tr>
+            <th scope="row">{{data_fake.unique_id}}</th>
+            <td>{{data_fake.first_name}}</td>
+            <td>{{data_fake.last_name}}</td>
+            <td>{{data_fake.email}}</td>
+            <td>{{data_fake.phone}}</td>
+            <td>{{data_fake.address}}</td>
+        </tr>
+    </tbody>
+    {% endfor %}
+
+    <div class="pagination">
+        <nav aria-label="Page navigation">
+            <ul
+                class="pagination justify-content-center"
+            >
+                <span class="step-links">
+                    {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a
+                            class="page-link"
+                            href="?page=1"
+                            aria-label="First"
+                        >
+                            <span aria-hidden="true"
+                                >&laquo; First</span
+                            >
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a
+                            class="page-link"
+                            href="?page={{ page_obj.previous_page_number }}"
+                            aria-label="Previous"
+                        >
+                            <span aria-hidden="true"
+                                >Previous</span
+                            >
+                        </a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <span class="page-link"
+                            >&laquo; First</span
+                        >
+
+                    </li>
+                    <li class="page-item disabled">
+                        <span class="page-link"
+                            >Previous</span
+                        >
+                    </li>
+                    {% endif %}
+                </span>
+
+                <li class="page-item disabled">
+                    <span class="page-link text-success fs-4 ">
+                        Page {{ page_obj.number }} of
+                        {{ total_pages }}
+                    </span>
+
+                </li>
+
+                <span class="step-links">
+                    {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a
+                            class="page-link"
+                            href="?page={{ page_obj.next_page_number }}"
+                            aria-label="Next"
+                        >
+                            <span aria-hidden="true"
+                                >Next</span
+                            >
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a
+                            class="page-link"
+                            href="?page={{ page_obj.paginator.num_pages }}"
+                            aria-label="Last"
+                        >
+                            <span aria-hidden="true"
+                                >Last &raquo;</span
+                            >
+                        </a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <span class="page-link"
+                            >Next</span
+                        >
+                    </li>
+                    <li class="page-item disabled">
+                        <span class="page-link"
+                            >Last &raquo;</span
+                        >
+                    </li>
+                    {% endif %}
+                </span>
+            </ul>
+        </nav>
+    </div>
+</table>
+</form>
+</div>
+</div>
+</div>
 </div>
 {% endblock %}
